format document, improved documentation and improve relation between routes and controllers
